--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Newbie Home - 我的个人导航与博客</title>
+    <title>Newbie Space - 我的个人导航与博客</title>
     <meta name="description" content="收集灵感，记录成长，分享技术" />
   </head>
   <body>
