--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Newbie Space - 我的个人导航与博客</title>
     <meta name="description" content="收集灵感，记录成长，分享技术" />
+    <!-- 主题初始化脚本（避免闪烁） -->
+    <script>
+      (function() {
+        var stored = localStorage.getItem('theme');
+        var isDark = stored ? stored === 'dark' : window.matchMedia('(prefers-color-scheme: dark)').matches;
+        if (isDark) document.documentElement.classList.add('dark');
+      })();
+    </script>
   </head>
   <body>
     <div id="app"></div>
