--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Newbie Space</title>
     <meta name="description" content="我的个人导航与博客，收集灵感，记录成长，分享技术" />
     <!-- 主题初始化脚本（避免闪烁） -->
