--- a/index.html
+++ b/index.html
@@ -14,6 +14,44 @@
         if (isDark) document.documentElement.classList.add('dark');
       })();
     </script>
+    <!-- 动态调整资源路径，支持 GitHub Pages 子路径和自定义域名 -->
+    <script>
+      (function() {
+        var pathname = window.location.pathname;
+        var hostname = window.location.hostname;
+        // 如果是自定义域名（nichangen.com），且资源路径包含 /newbie-space/，需要移除前缀
+        if (hostname === 'nichangen.com' || hostname === 'www.nichangen.com') {
+          var base = '/newbie-space';
+          // 调整所有 script 和 link 标签的路径
+          var adjustPaths = function() {
+            var scripts = document.querySelectorAll('script[src]');
+            scripts.forEach(function(script) {
+              var src = script.getAttribute('src');
+              if (src && src.startsWith(base)) {
+                script.setAttribute('src', src.substring(base.length));
+              }
+            });
+            var links = document.querySelectorAll('link[href]');
+            links.forEach(function(link) {
+              var href = link.getAttribute('href');
+              if (href && href.startsWith(base)) {
+                link.setAttribute('href', href.substring(base.length));
+              }
+            });
+            // 调整 __vite_plugin_import_meta_env__ 中的 BASE_URL
+            if (window.__vite_plugin_import_meta_env__) {
+              window.__vite_plugin_import_meta_env__.BASE_URL = '/';
+            }
+          };
+          // 立即执行一次
+          adjustPaths();
+          // DOMContentLoaded 时再执行一次
+          if (document.readyState === 'loading') {
+            document.addEventListener('DOMContentLoaded', adjustPaths);
+          }
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="app"></div>
